--- a/Patient/pappointments.html
+++ b/Patient/pappointments.html
@@ -29,7 +29,7 @@
                                 <img class="logo-dark logo-img" src="./assets/images/nhid-logo.png" srcset="./assets/images/nhid-logo.png 2x" alt="logo-dark">
                             </a>
                         </div>
-                        <!-- <h5 class="title">Hospital Manegment</h5> -->
+                        <!-- <h5 class="title">Hospital Assets</h5> -->
                         <ul class="nk-menu">
                             <li class="nk-menu-item">
                                 <a href="Patient/patient-dashboard.html" class="nk-menu-link">
