--- a/register.html
+++ b/register.html
@@ -49,7 +49,7 @@
                                                 <option value="#">---Select Hospital Category---</option>
                                                 <option value="">Federal/Tertiary Hospital</option>
                                                 <option value="">Federal Medical Centre</option>
-                                                <option value="">Other Specialized Federal Hospital</option>
+                                                <option value="">Other Specialized Tertiary Hospitals</option>
                                             </select>
                                         </div>
                                     </div>
