--- a/superAdmin/appointments.html
+++ b/superAdmin/appointments.html
@@ -145,7 +145,7 @@
                         </ul><!-- .nk-menu -->
                     </div>
                     <div class="nk-menu-content menu-active" data-content="navHospital">
-                        <h5 class="title">Hospital Manegment</h5>
+                        <h5 class="title">Hospital Assets</h5>
                         <ul class="nk-menu">
                             <li class="nk-menu-item">
                                 <a href="superAdmin/super-admin-dashboard.html" class="nk-menu-link">
@@ -643,9 +643,20 @@
                                                                                                         </select>
                                                                                                     </div>
                                                                                                 </div>
-                                                                                                <div class="col-12">
+                                                                                                <div class="col-6">
                                                                                                     <div class="form-group">
-                                                                                                        <label class="overline-title overline-title-alt">Admit Date</label>
+                                                                                                        <label class="overline-title overline-title-alt">Admit Start Date</label>
+                                                                                                        <div class="form-control-wrap">
+                                                                                                            <div class="form-icon form-icon-right">
+                                                                                                                <em class="icon ni ni-calendar"></em>
+                                                                                                            </div>
+                                                                                                            <input type="text" class="form-control date-picker" data-date-format="dd-mm-yyyy" placeholder="dd-mm-yyyy">
+                                                                                                        </div>
+                                                                                                    </div>
+                                                                                                </div>
+                                                                                                <div class="col-6">
+                                                                                                    <div class="form-group">
+                                                                                                        <label class="overline-title overline-title-alt">Admit End Date</label>
                                                                                                         <div class="form-control-wrap">
                                                                                                             <div class="form-icon form-icon-right">
                                                                                                                 <em class="icon ni ni-calendar"></em>
