--- a/superAdmin/sp-death-report.html
+++ b/superAdmin/sp-death-report.html
@@ -556,6 +556,17 @@
                                                                                             <div class="row gx-6 gy-3">
                                                                                                 <div class="col-6">
                                                                                                     <div class="form-group">
+                                                                                                        <label class="overline-title overline-title-alt">Cause of Death</label>
+                                                                                                        <select class="form-select js-select2">
+                                                                                                            <option value="any">--Select Cause---</option>
+                                                                                                            <option value="any">Disease Releted</option>
+                                                                                                            <option value="ev"> Drug Releted</option>
+                                                                                                            <option value="ve"> Other Causes</option>
+                                                                                                        </select>
+                                                                                                    </div>
+                                                                                                </div>
+                                                                                                <div class="col-6">
+                                                                                                    <div class="form-group">
                                                                                                         <label class="overline-title overline-title-alt">Hospital</label>
                                                                                                         <select class="form-select js-select2">
                                                                                                             <option value="any">Hospital A</option>
@@ -616,7 +627,18 @@
                                                                                                 </div>
                                                                                                 <div class="col-6">
                                                                                                     <div class="form-group">
-                                                                                                        <label class="overline-title overline-title-alt">Date</label>
+                                                                                                        <label class="overline-title overline-title-alt">Date Range Start</label>
+                                                                                                        <div class="form-control-wrap">
+                                                                                                            <div class="form-icon form-icon-right">
+                                                                                                                <em class="icon ni ni-calendar"></em>
+                                                                                                            </div>
+                                                                                                            <input type="text" class="form-control date-picker" data-date-format="dd-mm-yyyy" placeholder="dd-mm-yyyy">
+                                                                                                        </div>
+                                                                                                    </div>
+                                                                                                </div>
+                                                                                                <div class="col-6">
+                                                                                                    <div class="form-group">
+                                                                                                        <label class="overline-title overline-title-alt">Date Range Stop</label>
                                                                                                         <div class="form-control-wrap">
                                                                                                             <div class="form-icon form-icon-right">
                                                                                                                 <em class="icon ni ni-calendar"></em>
