--- a/superAdmin/sp-hospitals.html
+++ b/superAdmin/sp-hospitals.html
@@ -143,7 +143,7 @@
                         </ul><!-- .nk-menu -->
                     </div>
                     <div class="nk-menu-content menu-active" data-content="navHospital">
-                        <h5 class="title">Hospital Manegment</h5>
+                        <h5 class="title">Hospital Assets</h5>
                         <ul class="nk-menu">
                             <li class="nk-menu-item">
                                 <a href="superAdmin/super-admin-dashboard.html" class="nk-menu-link">
@@ -606,7 +606,7 @@
                                                                                                     </div>
                                                                                                 </div>
 
-                                                                                                <div class="col-12">
+                                                                                                <div class="col-6">
                                                                                                     <div class="form-group">
                                                                                                         <label class="overline-title overline-title-alt">By Geopolitical Zone</label>
                                                                                                         <select class="form-select js-select2">
@@ -620,10 +620,33 @@
                                                                                                         </select>
                                                                                                     </div>
                                                                                                 </div>
-                                                                                                
-                                                                                                <div class="col-12">
+                                                                                                <div class="col-6">
                                                                                                     <div class="form-group">
-                                                                                                        <label class="overline-title overline-title-alt">Date of registration</label>
+                                                                                                        <label class="overline-title overline-title-alt">By Hospital Departments</label>
+                                                                                                        <select class="form-select js-select2">
+                                                                                                            <option value="any">--Select--</option>
+                                                                                                            <option value="normal">Cardiology</option>
+                                                                                                            <option value="cesarean">Anesthesiology</option>
+                                                                                                            <option value="cesarean">Darmatology</option>
+                                                                                                            <option value="cesarean">Others</option>
+                                                                                                        </select>
+                                                                                                    </div>
+                                                                                                </div>
+                                                                                                
+                                                                                                <div class="col-6">
+                                                                                                    <div class="form-group">
+                                                                                                        <label class="overline-title overline-title-alt">Registration Date Start</label>
+                                                                                                        <div class="form-control-wrap">
+                                                                                                            <div class="form-icon form-icon-right">
+                                                                                                                <em class="icon ni ni-calendar"></em>
+                                                                                                            </div>
+                                                                                                            <input type="text" class="form-control date-picker" data-date-format="dd-mm-yyyy" placeholder="dd-mm-yyyy">
+                                                                                                        </div>
+                                                                                                    </div>
+                                                                                                </div>
+                                                                                                <div class="col-6">
+                                                                                                    <div class="form-group">
+                                                                                                        <label class="overline-title overline-title-alt">Registration Date Stop</label>
                                                                                                         <div class="form-control-wrap">
                                                                                                             <div class="form-icon form-icon-right">
                                                                                                                 <em class="icon ni ni-calendar"></em>
