--- a/superAdmin/sp-medicine-list.html
+++ b/superAdmin/sp-medicine-list.html
@@ -525,6 +525,13 @@
                                                                     <ul class="link-list-opt no-bdr">
                                                                         <div class="col-12">
                                                                             <div class="form-group">
+                                                                                <label class="overline-title overline-title-alt">Drug Code</label>
+                                                                                <input type="text" class="form-control">
+                                                                            </div>
+                                                                        </div>
+                                                                        <br>
+                                                                        <div class="col-12">
+                                                                            <div class="form-group">
                                                                                 <label class="overline-title overline-title-alt">Hospital</label>
                                                                                 <select class="form-select js-select2">
                                                                                     <option value="any">XYZ Hospital</option>
