--- a/NHIS/nhis-dashboard.html
+++ b/NHIS/nhis-dashboard.html
@@ -146,7 +146,7 @@
                         </ul><!-- .nk-menu -->
                     </div>
                     <div class="nk-menu-content menu-active" data-content="navHospital">
-                        <h5 class="title">Hospital Manegment</h5>
+                        <h5 class="title">Hospital Assets</h5>
                         <ul class="nk-menu">
                             <li class="nk-menu-item">
                                 <a href="NHIS/nhis-dashboard.html" class="nk-menu-link">
