--- a/superAdmin/sp-staff.html
+++ b/superAdmin/sp-staff.html
@@ -143,7 +143,7 @@
                         </ul><!-- .nk-menu -->
                     </div>
                     <div class="nk-menu-content menu-active" data-content="navHospital">
-                        <h5 class="title">Hospital Manegment</h5>
+                        <h5 class="title">Hospital Assets</h5>
                         <ul class="nk-menu">
                             <li class="nk-menu-item">
                                 <a href="superAdmin/super-admin-dashboard.html" class="nk-menu-link">
