--- a/superAdmin/super-admin-dashboard.html
+++ b/superAdmin/super-admin-dashboard.html
@@ -143,7 +143,7 @@
                         </ul><!-- .nk-menu -->
                     </div>
                     <div class="nk-menu-content menu-active" data-content="navHospital">
-                        <h5 class="title">Hospital Management</h5>
+                        <h5 class="title">Hospital Assets</h5>
                         <ul class="nk-menu">
                             <li class="nk-menu-item">
                                 <a href="superAdmin/super-admin-dashboard.html" class="nk-menu-link">
@@ -500,9 +500,9 @@
                                 <div class="nk-block-head nk-block-head-sm">
                                     <div class="nk-block-between">
                                         <div class="nk-block-head-content">
-                                            <h3 class="nk-block-title page-title">Federal Ministry of Health Dashboard</h3>
+                                            <h3 class="nk-block-title page-title">Federal Ministry of Health and Social Welfare Dashboard</h3>
                                             <div class="nk-block-des text-soft">
-                                                <p>Welcome to NHID Federal Ministry of Health Dashboard.</p>
+                                                <p>Welcome to NHID Federal Ministry of Health and Social Welfare Dashboard.</p>
                                             </div>
                                         </div><!-- .nk-block-head-content -->
                                         
