--- a/register.html
+++ b/register.html
@@ -63,10 +63,21 @@
                                                 <option value="">University of Benin Teaching Hospital</option>
                                                 <option value="">University of Calabar Teaching Hospita</option>
                                                 <option value="">Federal Medical Center Gusau</option>
-                                                <option value="">Others</option>
-                                            </select>
+                                                <option value="">
+                                                    <!-- <a href="#" onclick="myFunction()">Others</a> -->
+                                                    <button onclick="myFunction()">Others</button>
+                                                    </option>
+                                                </select>
                                         </div>
                                     </div>
+
+                                    <div class="form-group" id="myDIV" style="display: none;">
+                                        <label class="form-label">Others</label>
+                                        <div class="form-control-wrap">
+                                            <input type="text" class="form-control form-control-lg" placeholder="Enter Hospital Name">
+                                        </div>
+                                    </div>
+
                                     <div class="form-group">
                                         <label class="form-label" for="email">Email</label>
                                         <div class="form-control-wrap">
@@ -118,7 +129,16 @@
     </div>
     <!-- app-root @e -->
     <!-- JavaScript -->
+    <script>
+        function myFunction() {
+          var x = document.getElementById("myDIV");
+          x.style.display = "block";
+         
+        }
+    </script>
+
     <script src="./assets/js/bundle.js?ver=3.1.3"></script>
     <script src="./assets/js/scripts.js?ver=3.1.3"></script>
     <!-- select region modal -->
+</body>
 </html>
