--- a/subscriber/subscriber-dashbaord.html
+++ b/subscriber/subscriber-dashbaord.html
@@ -559,9 +559,9 @@
                                 <div class="nk-block-head nk-block-head-sm">
                                     <div class="nk-block-between">
                                         <div class="nk-block-head-content">
-                                            <h3 class="nk-block-title page-title">Subscriber Hospital Management Dashboard</h3>
+                                            <h3 class="nk-block-title page-title">Subscriber Hospital Assets Dashboard</h3>
                                             <div class="nk-block-des text-soft">
-                                                <p>Welcome to NHID Suscriber Hospital Management Dashboard.</p>
+                                                <p>Welcome to NHID Suscriber Hospital Assets Dashboard.</p>
                                             </div>
                                         </div><!-- .nk-block-head-content -->
                                         <div class="nk-block-head-content">
